--- a/templates/results.html
+++ b/templates/results.html
@@ -9,5 +9,8 @@
     {% for hist in hists %}
     <img src="{{url_for('static', filename=hist)}}" alt="{{hist}}">
     {% endfor %}
+    <form method="POST" action="" enctype="multipart/form-data">
+        <p><input type="submit" value="Download Data"></p>
+    </form>
 </body>
 </html>
